@@ -12,6 +12,7 @@
 	* main/wall.c, main/wall.h: move consts for WALL_IS_DOORWAY to header
 	* main/editor/info.c: only include i86.h and malloc.h ifdef DO_MEMINFO
 	* main/editor/centers.c: change curseg2p to Curseg2p
+	* main/editor/func.c: Include strutil.h in func.c (for stricmp)
 
 2005-01-23  Jason Owen  <shannara256@yahoo.com>
 
